--- a/pagetwo.html
+++ b/pagetwo.html
@@ -33,8 +33,8 @@
     				</button>
     			</div>
 	    			<ul class="nav navbar-nav navbar-collapse collapse">
-	    			<li><a href="index.html">Home</a></li>
-	    			<li><a href="pagetwo.html">Page 2</a></li>
+	    			<li><a href="#">Menu</a></li>
+	    			<li><a href="#">Menu</a></li>
 	    			<li><a href="#">Menu</a></li>
 	    			<li><a href="#">Menu</a></li>
 	    		</ul>
